@@ -787,11 +787,12 @@ For more, see Entries-38
  xthings()                 xvcon()                   xvexits()                
  xvplayers()               xvthings()                xwho()                   
  xwhoid()                  z_tel                     zemit()                  
- zfun()                    zmo                       zmp                      
- zmr                       zmt                       zmwho()                  
+ zfun()                    zmos                      zmps                     
+ zmrs                      zmts                      zmwho()                  
  zone                      zone master objects       zone master rooms        
- zone masters              zone objects              zone()                   
- zones                     zones2                    zwho()                   
+ zone master things        zone masters              zone objects             
+ zone()                    zones                     zones2                   
+ zwho()                                                                       
 
 & &Entries
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
