@@ -36,6 +36,8 @@ Fixes:
    8191-length arguments, instead of the usual 8192. Reported by Jules. [MG]
  * It was possible to return non-printable characters from an SQL database,
    which could cause undefined weirdness. Reported by spork. [MG]
+ * Many things which listed attributes from a parent, like lattrp() or
+   examine/parent, didn't respect no_inherit fully. [MG]
 
 Minor changes:
  * strreplace() now works harder to keep existing ANSI intact, when you
